--- a/project/templates/products.html
+++ b/project/templates/products.html
@@ -1,15 +1,17 @@
 {% extends 'flatpages/default.html' %}
 
+{% load custom_filters %} <!-- не забываем заранее загружать наши фильтры! -->
+
 {% block title %}
 Products
 {% endblock title %}
 
 {% block content %}
     <h1>Все товары</h1>
-    <h3>{{ time_now|date:'M d Y' }}</h3>
-    <h3>{{ value1|default_if_none:'nothing' }}</h3>
+    <h3>{{ time_now }}</h3>
+    <h3> {{ value1|default_if_none:"ничего" }} </h3>
     <hr>
-    {% if products %} <!-- Если есть товары, то выводим таблицу с ними -->
+    {% if products %}
         <table>
             <tr>
                 <td>
@@ -28,25 +30,25 @@ Products
                     Количество
                 </td>
             </tr>
-            {% for product in products %}
-                <tr>
-                    <td>
-                        {{ product.name }}
-                    </td>
-                    <td>
-                        {{ product.description|truncatechars:15 }}
-                    </td>
-                    <td>
-                        {{ product.category.name }}
-                    </td>
-                    <td>
-                        {{ product.price }}
-                    </td>
-                    <td>
-                         {{ product.quantity }}
-                    </td>
-                </tr>
-            {% endfor %}
+        {% for product in products %}
+            <tr>
+                <td>
+                    {{ product.name|multiply:4 }} <!-- применим наш фильтр, чтобы название товара вывелось 4 раза -->
+                </td>
+                <td>
+                    {{ product.description|truncatewords:4 }}
+                </td>
+                <td>
+                    {{ product.category.name }}
+                </td>
+                <td>
+                    {{ product.price }}
+                </td>
+                <td>
+                    {{ product.quantity }}
+                </td>
+            </tr>
+        {% endfor %}
         </table>
     {% else %}
         <h2>Товаров нет!</h2>
