Unit D4.4: One more refactoring.

--- a/project/templates/sample_app/product_delete.html
+++ b/project/templates/sample_app/product_delete.html
@@ -1,4 +1,4 @@
-{% extends 'flatpages/default.html' %}
+{% extends 'sample_app/default.html' %}
 
 {% block title %} Product list {% endblock title %}
  
